<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment1">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/bg2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="110dp"
        android:background="#FFB300"
        android:textSize="20sp"
        android:onClick="OnNews"
        android:text="@string/button1"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="110dp"
        android:onClick="OnReport"
        android:textSize="20sp"
        android:background="#FFB300"
        android:text="@string/button2"
        tools:ignore="OnClick" />
    <Button
        android:id="@+id/button_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="210dp"
        android:onClick="OnAnalysis"
        android:textSize="20sp"
        android:text="@string/button3"
        android:background="#FFB300"
        tools:ignore="OnClick" />
    <Button
        android:id="@+id/button_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="210dp"
        android:onClick="OnData"
        android:textSize="20sp"
        android:text="@string/button4"
        android:background="#FFB300"
        tools:ignore="OnClick" />
</FrameLayout>